# Quantitative-System-Public

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
archive/: __init__.py
archive/strategies/: __init__.py  cvd_strategy.py  vpin_strategy.py
backtest/: engine.py
data/: download.py  download_phase2.py  download_phase4.py  download_phase5.py  download_signals_cde.py  extend_to_2026.py
docs/: S1_Software_Report.tex  architecture.md  frontend_report.tex  runbook.md
experiments/: B1.yaml  B2.yaml
framework/: costs.py  registry.py  splits.py
live/: exchange.py  feed.py  simulator.py
paper_trading/: .env.example  README.md  docker-compose.yml  start_backend.ps1  start_frontend.ps1
paper_trading/backend/: Dockerfile  requirements.txt
paper_trading/frontend/: nginx.conf  package-lock.json  package.json
research/: README.md
research/killed (Failed Stage 2)/: 01_build_dataset.py  06_hypothesis_testing.py  07_signal_ab_exploration.py  08_signal_f_vpin_asymmetry.py  09_mechanism_signals.py  10_basis_rigorous.py  11_signal_e_premium_index.py  12_h1_execution_study.py  13_h1_2025_oos.py  14_h1_h2_oos_combination.py  15_h1_execution_feasibility.py  16_phase2_quick_screen.py  25_du_short.py  README.md  run_killed_strategies.py
results/A1/: backtest_metrics.csv
results/Outdated  Reports/: Final_Report.tex  signal_research_report.tex
results/killed/: hypothesis_testing.txt  market_inefficiencies_quintiles.csv  (+5 more)
scripts/: check_sync.py
strategies/: __init__.py  base.py
tests/: conftest.py  test_paper_broker.py  test_pnl.py  test_risk.py
(+113 files in other folders)
